--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/onest": "^5.0.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "astro": "^4.7.1",
     "tailwindcss": "^3.4.3"
   }
